package com.lld.interviewquestions.snakeNladder;

// It can be either a snake or a ladder(not creating separate classes as they have same properties)
public class Jump {
    
    int start;
    int end;

    //getters and setters
}
