package com.lld.interviewquestions.snakeNladder;

public class Player {

    String id;
    int currentPosition;

    public Player(String id, int currentPosition) {
        this.id = id;
        this.currentPosition = currentPosition;
    }

    // getters and setters
}
