package com.lld.interviewquestions.snakeNladder;

public class SnakeNLadderDemo {

    public static void main(String[] args) {

        Game obj = new Game();
        obj.startGame();
    }
}
